fixing desktop search button styling/menu z-index

--- a/styles/css/newguts.css
+++ b/styles/css/newguts.css
@@ -91,7 +91,7 @@ a:hover.fpccSocialIcon,a:active.fpccSocialIcon{color:#333;background:#DDDDD5}
 a:link.fpccMore,a:visited.fpccMore{color:#7E9137}
 a:hover.fpccMore,a:active.fpccMore{text-decoration:none;color:#333}
 .fpccButton,.fpccButton:visited{text-align:center;background:#7E9039;font-family:Helvetica,Arial,sans-serif;border:none;border-bottom:2px solid #606D29;padding:10px 15px;max-height:37px;color:#FFF;font-size:.9375em;line-height:1;text-decoration:none;vertical-align:top}
-.fpccButton:hover{background:#606D29;border-bottom:2px solid #464F1E}
+.fpccButton:hover{background:#606D29;border-bottom:2px solid #464F1E;cursor:pointer}
 .fpccButton:active{background:#606D29}
 #fpccMainContainer{box-shadow:0 4px 8px 0 rgba(0,0,0,0.2)}
 #fpccPreserveName{box-shadow:0 -3px 10px 0 rgba(0,0,0,0.2)}
@@ -477,7 +477,6 @@ section.trailListColumn .accordion{/* display:none;*/border-top:8px solid #7E913
 section.trailListColumn{position:fixed;top:0;left:0;width:384px;max-height:100%;/*min-height:14em;*/padding:0;background:none;z-index:9000;height:100%;/* overflow:visible;*/}
 .fpccSocialIcon{width:27%;text-align:center;float:left;padding:.5em 0;margin:0 3%;border-radius:3px}
 #fpccBrand{display:inherit;padding-top:10px}
-.fpccButton:active{border-bottom:none;margin-top:2px}
 #fpccMainContainer{box-shadow:0 4px 8px 0 rgba(0,0,0,0.2); z-index:1000;top:0}
 
 /*panel - search*/
@@ -489,6 +488,7 @@ section.trailListColumn{position:fixed;top:0;left:0;width:384px;max-height:100%;
 .fpccEntryDis{font-size:.9125em;font-family:Georgia,"Times New Roman",serif;float:right;width:30%;text-align:right}
 #fpccSearchContainer.fpccUnit{padding:1em;box-shadow:none}
 #fpccSearchContainer .fpccButton{width:23%;border-bottom:2px solid #606D29;height:auto;float:right;display:inline;max-height:37px}
+.fpccButton:active{border-bottom:none;margin-top:2px}
 #fpccSearchContainer select{border:1px solid #999;padding:5px;width:75%;height:37px;font-size:.9375em;line-height:1;box-sizing:border-box}
 section.trailListColumn .fpccResults.fpccUnit{padding:0;overflow-x:hidden;overflow-y:scroll}
 .fpccResults.fpccUnit{box-shadow:none}
@@ -545,4 +545,5 @@ ul.fpccMenuList a:hover,ul.fpccMenuList a:active{background:#666}
 
 /*selectize override*/
 .selectize-input{border:1px solid #d0d0d0;padding:9px 8px 8px;min-height:initial;width:75%}
+    .selectize-dropdown{z-index:10000}
 }
